@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.8.10-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-08-10 05:36:50, took 00:09:07, with 60 workers, on 631 cases, 0 failed, 0 traces, 3 retries<br/>
+tested: 2024-08-10 06:23:39, took 00:09:40, with 60 workers, on 631 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
