@@ -15933,3 +15933,6 @@ qc pass: interop9: qinq encapsulation
 ---------------------------------- 2024-08-10 05:11:59 24.8.10
 no qc pass: dhcp with excluded address
 failed: dhcp with excluded address
+---------------------------------- 2024-08-10 06:00:56 24.8.10
+no failed: dhcp with excluded address
+qc pass: dhcp with excluded address
